--- a/config/database.yml
+++ b/config/database.yml
@@ -11,11 +11,10 @@
 #
 default: &default
   adapter: mysql2
-  encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
-  host: <%= ENV.fetch("DB_HOST") { "localhost" } %>
+  username: "root"
+  password: 12345678
+  host: "127.0.0.1"
 
 development:
   <<: *default
